--- a/pergashaMain.html
+++ b/pergashaMain.html
@@ -17,23 +17,49 @@
 
     <header>
 
-        <nav class="navbar navbar-dark navbar-expand-lg" style="background-color: #4E182A;">
-            <div class="navbar-brand">
-                <a class="nav-link active" href="pergashaMain.html" style="color:white;">Pergasha's Archives</a>
+        <nav class="navbar navbar-dark navbar-expand-lg">
+            <div class="navbar-brand  mr-4">
+                <img id="dreadful-logo" src="assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.png">
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="pergasha_npcs.html">Npcs</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="pergashaMain.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Player Options
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="pergasha-pages/pergasha_classes.html">Classes</a>
+                      <a class="dropdown-item" href="pergasha-pages/pergasha_races.html">Races</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="pergasha-pages/pergasha_feats.html">Feats</a>
+                      <a class="dropdown-item" href="pergasha-pages/pergasha_training.html">Training</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_locations.html">Locations</a>
+                    <a class="nav-link" href="pergasha-pages/pergasha_psionics.html">Psionics</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      References
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="pergasha-pages/pergasha_glyphs.html">Glyphs</a>
+                      <a class="dropdown-item" href="pergasha-pages/pergasha_locations.html">Locations</a>
+                      <a class="dropdown-item" href="pergasha-pages/pergasha_items.html">Items</a>
+                      <a class="dropdown-item" href="pergasha-pages/pergasha_npcs.html">Npcs</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_homebrew_options.html">Homebrew Options</a>
+                    <a class="nav-link" href="pergasha-pages/pergasha_rules.html">Rules</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pergasha-pages/pergasha_admin.html">Admin</a>
                 </li>
             </ul>
             </div>
@@ -41,13 +67,54 @@
 
     </header>
 
-    <h1>Welcome to Pergasha!</h1>
-
-    <img src="assets/Dreadful_odysseys.PNG">
     
+    <h1 class="text-center mt-5">Welcome to Pergasha!</h1>
+    <div class="homepage-shortcuts d-flex justify-content-around flex-wrap">
 
-     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_races.html">
+            <div><img class="shortcuts-icon" src="assets/icons/race-logo.svg"></div>
+            <h4>Races</h4>
+        </a>
+        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_classes.html">
+            <div><img class="shortcuts-icon" src="assets/icons/class-logo.svg"></div> 
+            <h4>Classes</h4>
+        </a>
+        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_items.html">
+            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <h4>Items</h4>
+        </a>
+        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_psionics.html">
+            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <h4>Psionics</h4>
+        </a>
+        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_feats.html">
+            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <h4>Feats</h4>
+        </a>
+        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_training.html">
+            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <h4>Training</h4>
+        </a>
+       <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_glyphs.html">
+            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <h4>Glyphs</h4>
+        </a>
+        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_rules.html">
+            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <h4>Rules</h4>
+        </a>
+        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_npcs.html">
+            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <h4>NPCs</h4>
+        </a>
+        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_locations.html">
+            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <h4>Locations</h4>
+        </a>
+    </div>  
+
+    <footer class="text-right">©2020 Michael Baglio.</footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
