--- a/pergashaMain.html
+++ b/pergashaMain.html
@@ -80,40 +80,43 @@
             <h4>Classes</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_items.html">
-            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <div><img class="shortcuts-icon" src="assets/icons/item-logo.svg"></div>
             <h4>Items</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_psionics.html">
-            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <div><img class="shortcuts-icon" src="assets/icons/psionics-logo.svg"></div>
             <h4>Psionics</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_feats.html">
-            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <div><img class="shortcuts-icon" src="assets/icons/feats-logo.svg"></div>
             <h4>Feats</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_training.html">
-            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <div><img class="shortcuts-icon" src="assets/icons/training-logo.svg"></div>
             <h4>Training</h4>
         </a>
        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_glyphs.html">
-            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <div><img class="shortcuts-icon" src="assets/icons/glyphs-logo.svg"></div>
             <h4>Glyphs</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_rules.html">
-            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <div><img class="shortcuts-icon" src="assets/icons/rules-logo.svg"></div>
             <h4>Rules</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_npcs.html">
-            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <div><img class="shortcuts-icon pr-3" src="assets/icons/npcs-logo.svg"></div>
             <h4>NPCs</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_locations.html">
-            <div><img class="shortcuts-icon" src="https://via.placeholder.com/200"></div>
+            <div><img class="shortcuts-icon" src="assets/icons/locations-logo.svg"></div>
             <h4>Locations</h4>
         </a>
     </div>  
 
     <footer class="text-right">©2020 Michael Baglio.</footer>
+
+    <script src="../pergasha.js"></script>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
