--- a/pergasha-pages/pergasha_races.html
+++ b/pergasha-pages/pergasha_races.html
@@ -89,7 +89,7 @@
         
             <div class="tab-content col-8" id="race-tabDesc">
                 <!-- PERGASHAN -->
-                <table class="table-sm shadow race-table tab-pane fade show active"  id="cloud-pergashan" role="tabpanel" aria-labelledby="cloud-pergashan-list">
+                <table class="table-sm shadow race-table tab-pane fade"  id="cloud-pergashan" role="tabpanel" aria-labelledby="cloud-pergashan-list">
                     <tbody>
                         <tr colspan="10">
                             <th class="class-border border-0" colspan="10"></th>
@@ -399,7 +399,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <b><i>Try Again. </b>When you would be hit with an attack, you may use your reaction and expend 1 Hit Die to add your Constitution modifier to your AC until the start of your next turn.
+                                <b><i>Try Again.</i> </b>When you would be hit with an attack, you may use your reaction and expend 1 Hit Die to add your Constitution modifier to your AC until the start of your next turn.
                             </td>
                         </tr>
                         <tr>
@@ -588,7 +588,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <b><i>Bone Knuckles.</i> </b>Your fists are covered with bony plates. Your unarmed strike deals bludgeoning damage 1d6 + your Constitution modifier, and you are proficient with this attack.<br> If your unarmed strike has a higher dice roll than this feature, you can instead add bludgeoning damage to each successful strike equal to half of your Constitution modifier (minimum of +1).
+                                <b><i>Bone Knuckles.</i> </b>Your fists are covered with bony plates. Your unarmed strike deals bludgeoning damage 1d6 + your Constitution modifier, and you are proficient with this attack.<br>&nbsp; &nbsp; If your unarmed strike has a higher dice roll than this feature, you can instead add bludgeoning damage to each successful strike equal to half of your Constitution modifier (minimum of +1).
                             </td>
                         </tr>
                         <tr>
