All current filters fixed

--- a/pergasha-pages/pergasha_classes.html
+++ b/pergasha-pages/pergasha_classes.html
@@ -69,120 +69,70 @@
 
       <div class="row mt-5 mb-5 d-flex flex-wrap">
         <ul class="list-group col-3  align-self-start accordion" id="class-selection">
-          <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#barbarian-archetypes" id="barbarian">
+          <li class="list-group-item list-group-item-action list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#barbarian-archetypes" id="barbarian">
             <span class="nav-link class-nav-item text-reset" id="barbarian-name">Barbarian</span>
             <span class="badge badge-primary badge-pill" id="barbarian-pill">6</span>
           </li>
           <div class="collapse archetypes" id="barbarian-archetypes" data-parent="#class-selection">
-            <ul class="nav flex-column ml-2">
-                <li class="nav-item">
-                  <a class="nav-link text-reset" href="#" id="ancestral-guardian-archetype">Ancestral Guardian</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="battlerager-archetype">Battlerager</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="beast-archetype">Beast</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-reset" href="#" id="berserker-archetype">Berserker</a>
-              </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="primal-warrior-archetype">Primal Warrior</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="totem-warrior-archetype">Totem Warrior</a>
-                </li>
+            <ul class="list-group flex-column">
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="ancestral-guardian-archetype">Ancestral Guardian</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="battlerager-archetype">Battlerager</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="beast-archetype">Beast</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="berserker-archetype">Berserker</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="primal-warrior-archetype">Primal Warrior</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="totem-warrior-archetype">Totem Warrior</li>
               </ul>
           </div>
           
-          <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#fighter-archetypes" id="fighter">
+          <li class="list-group-item list-group-item-action list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#fighter-archetypes" id="fighter">
             <span class="nav-link class-nav-item text-reset" id="fighter-name">Fighter</span>
             <span class="badge badge-primary badge-pill" id="fighter-pill">7</span>           
           </li>
           <div class="collapse archetypes" id="fighter-archetypes" data-parent="#class-selection">
-            <ul class="nav flex-column ml-2">
-                <li class="nav-item">
-                  <a class="nav-link text-reset" href="#" id="battle-master-archetype">Battle Master</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="brute-archetype">Brute</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="cavalier-archetype">Cavalier</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="champion-archetype">Champion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="psi-knight-archetype">Psi Knight</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-reset" href="#" id="sharpshooter-archetype">Sharpshooter</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-reset" href="#" id="warcaller-archetype">Warcaller</a>
-            </li>
+            <ul class="list-group flex-column">
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="battle-master-archetype">Battle Master</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="brute-archetype">Brute</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="cavalier-archetype">Cavalier</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="champion-archetype">Champion</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="psi-knight-archetype">Psi Knight</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="sharpshooter-archetype">Sharpshooter</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="warcaller-archetype">Warcaller</li>
               </ul>
           </div>
-          <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#monk-archetypes" id="monk">
+          <li class="list-group-item list-group-item-action list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#monk-archetypes" id="monk">
             <span class="nav-link class-nav-item text-reset" id="monk-name">Monk</span>
             <span class="badge badge-primary badge-pill" id="monkipill">5</span>
           </li>
           <div class="collapse archetypes" id="monk-archetypes" data-parent="#class-selection">
-            <ul class="nav flex-column ml-2">
-                <li class="nav-item">
-                  <a class="nav-link text-reset" href="#" id="drunken-master-archetype">Drunken Master</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="kensei-archetype">Kensei</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="long-death-archetype">Long Death</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="open-hand-archetype">Open Hand</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="soul-knife-archetype">Soul Knife</a>
-                </li>
+            <ul class="list-group flex-column">
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="drunken-master-archetype">Drunken Master</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="kensei-archetype">Kensei</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="long-death-archetype">Long Death</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="open-hand-archetype">Open Hand</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="soul-knife-archetype">Soul Knife</li>
               </ul>
           </div>
-          <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ranger-archetypes" id="ranger">
+          <li class="list-group-item list-group-item-action list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ranger-archetypes" id="ranger">
             <span class="nav-link class-nav-item text-reset" id="ranger-name">Ranger</span>
             <span class="badge badge-primary badge-pill" id="ranger-pill">3</span>
           </li>
           <div class="collapse archetypes" id="ranger-archetypes" data-parent="#class-selection">
-            <ul class="nav flex-column ml-2">
-                <li class="nav-item">
-                  <a class="nav-link text-reset" href="#" id="dervish-archetype">Dervish</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="doppelkin-archetype">Doppelkin Master</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="slayer-archetype">Slayer</a>
-                </li>
+            <ul class="list-group flex-column">
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="dervish-archetype">Dervish</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="doppelkin-archetype">Doppelkin Master</li>
+                <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="slayer-archetype">Slayer</li>
               </ul>
           </div>
-          <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#rogue-archetypes" id="rogue">
+          <li class="list-group-item list-group-item-action list-group-item-secondary d-flex justify-content-between align-items-center nav-item" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#rogue-archetypes" id="rogue">
             <span class="nav-link class-nav-item text-reset" id="rogue-name">Rogue</span>
             <span class="badge badge-primary badge-pill" id="rogue-pill">4</span>
             </li>
             <div class="collapse archetypes" data-parent="#class-selection" id="rogue-archetypes">
-              <ul class="nav flex-column ml-2">
-                  <li class="nav-item">
-                    <a class="nav-link text-reset" href="#" id="assassin-archetype">Assassin</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link text-reset" href="#" id="inquisitive-archetype">Inquisitive</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link text-reset" href="#" id="psi-assassin-archetype">Psi Assassin</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link text-reset" href="#" id="scout-archetype">Scout</a>
-                  </li>
+              <ul class="list-group flex-column">
+                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="assassin-archetype">Assassin</li>
+                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="inquisitive-archetype">Inquisitive</li>
+                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="psi-assassin-archetype">Psi Assassin</li>
+                  <li class="list-group-item list-group-item-action list-group-item-secondary nav-item" role="button" id="scout-archetype">Scout</li>
                 </ul>
             </div>
           
