--- a/pergasha-pages/pergasha_training.html
+++ b/pergasha-pages/pergasha_training.html
@@ -104,17 +104,41 @@
                 </table>
             </div>
         </div>
-        <div class="col-7 d-flex flex-column" id="trained-abilities">
-            <ul>
+        <div class="col-7 d-flex flex-column " id="trained-abilities">
+            <ul class="pl-0 shadow">
                 <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained"  id="trained-header">
-                    <span>Name</span>
-                    <span>Cost</span>
+                    <h4>Name</h4>
+                    <h4>Cost</h4>
                   </li>
-                <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#barbarian-archetypes" id="barbarian">
-                    <span class="class-nav-item text-reset" id="barbarian-name">Trained Ability 1</span>
-                    <span class="badge badge-secondary badge-pill cost-pill" >2</span>
+                <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ability-1" id="trained-ability-1">
+                    <span class="class-nav-item">Brutal Warrior</span>
+                    <span class="class-nav-item badge badge-secondary badge-pill" >1</span>
                   </li>
-                  <div class="collapse archetypes trained-desc" id="barbarian-archetypes" data-parent="#trained-abilities">test</div>
+                <div class="collapse abilities trained-desc" id="ability-1" data-parent="#trained-abilities"><p class="p-4">You gain the ability to utilize Brutalities (<i>see the Path of the Primal Warrior in the <a href="pergasha_classes.html">class</a> section</i>). Select two Brutalities that you learn from the list. You can use a Brutality once per short rest.</p></div>
+
+                <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ability-2" id="trained-ability-2">
+                    <span class="class-nav-item">Trained Ability 2</span>
+                    <span class="class-nav-item badge badge-secondary badge-pill" >X</span>
+                </li>
+                <div class="collapse abilities trained-desc" id="ability-2" data-parent="#trained-abilities"><p class="p-4">test</p></div>
+                
+                <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ability-2" id="trained-ability-2">
+                    <span class="class-nav-item">Trained Ability 2</span>
+                    <span class="class-nav-item badge badge-secondary badge-pill" >X</span>
+                </li>
+                <div class="collapse abilities trained-desc" id="ability-2" data-parent="#trained-abilities"><p class="p-4">test</p></div>
+                
+                <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ability-2" id="trained-ability-2">
+                    <span class="class-nav-item">Trained Ability 2</span>
+                    <span class="class-nav-item badge badge-secondary badge-pill" >X</span>
+                </li>
+                <div class="collapse abilities trained-desc" id="ability-2" data-parent="#trained-abilities"><p class="p-4">test</p></div>
+
+                <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ability-2" id="trained-ability-2">
+                    <span class="class-nav-item">Trained Ability 2</span>
+                    <span class="class-nav-item badge badge-secondary badge-pill" >X</span>
+                </li>
+                <div class="collapse abilities trained-desc" id="ability-2" data-parent="#trained-abilities"><p class="p-4">test</p></div>
             </ul>
         </div>
         <div class="col-2"></div>
