Responsive  Main, classes, feats, races & training

--- a/pergasha-pages/pergasha_training.html
+++ b/pergasha-pages/pergasha_training.html
@@ -59,9 +59,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="pergasha_rules.html">Rules</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="pergasha_admin.html">Admin</a>
-                </li>
+                </li> -->
             </ul>
             </div>
           </nav>
@@ -286,7 +286,7 @@
 
     
 
-    <footer class="text-right">©2020 Michael Baglio.</footer>
+    <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
     <script src="../pergasha.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
