--- a/pergashaMain.html
+++ b/pergashaMain.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="pergasha.css">
+    <link rel="shortcut icon" href="assets/icons/pergasha-icon.ico"/>
 
 
     <title>Pergasha</title>
@@ -58,9 +59,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="pergasha-pages/pergasha_rules.html">Rules</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="pergasha-pages/pergasha_admin.html">Admin</a>
-                </li>
+                </li> -->
             </ul>
             </div>
           </nav>
@@ -113,7 +114,7 @@
         </a>
     </div>  
 
-    <footer class="text-right">©2020 Michael Baglio.</footer>
+    <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
 
     <script src="../pergasha.js"></script>
 
