--- a/pergasha-pages/pergasha_admin.html
+++ b/pergasha-pages/pergasha_admin.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="../pergasha.css">
-
+    <link rel="shortcut icon" href="../assets/icons/pergasha-icon.ico"/>
 
     <title>Admin - Pergasha</title>
 </head>
@@ -58,9 +58,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="pergasha_rules.html">Rules</a>
                 </li>
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="pergasha_admin.html">Admin</a>
-                </li>
+                </li> -->
             </ul>
             </div>
           </nav>
@@ -70,7 +70,7 @@
     <h1>Admin page</h1>
 
     
-    <footer class="text-right">©2020 Michael Baglio.</footer>
+    <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
