--- a/pergasha-pages/pergasha_feats.html
+++ b/pergasha-pages/pergasha_feats.html
@@ -58,19 +58,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="pergasha_rules.html">Rules</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="pergasha_admin.html">Admin</a>
-                </li>
+                </li> -->
             </ul>
             </div>
           </nav>
 
     </header>
 
-    <div class="row mt-5 mb-5 d-flex flex-wrap">
-        <div class="col-1"></div>
-        <div class="col-2">
-            <div class="list-group" id="feat-list" role="tablist">
+    <div class="row mt-5 mb-5 mr-0 ml-0 flex-wrap justify-content-center container-fluid" id="feat-container">
+        <div class="col list-group mb-5" id="feat-list" role="tablist">
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="all-filter" data-toggle="list" role="button">All Feats</a>
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="psionics-filter" data-toggle="list" role="button">Psionic Feats</a>
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="strength-filter" data-toggle="list" role="button">Strength</a>
@@ -79,17 +77,14 @@
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="intelligence-filter" data-toggle="list" role="button">Intelligence</a>
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="wisdom-filter" data-toggle="list" role="button">Wisdom</a>
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="charisma-filter" data-toggle="list" role="button">Charisma</a>
-              </div>
         </div>
-        <div class="col-7 d-flex flex-column" id="feat-display-section">
-            
+        <div class="col d-flex flex-column" id="feat-display-section">
         </div>
-        <div class="col-2"></div>
     </div>
 
     
 
-    <footer class="text-right">©2020 Michael Baglio.</footer>
+    <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
 
     <script src="../pergasha.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
